src/objects/Storage__c.object
<CustomObject>
    <fields>
        <fullName>Combination__c</fullName>
        <label>Combination</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shared__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this locker has multiple members using it.</description>
        <label>Shared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <picklist>
            <picklistValues>
                <fullName>Size 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Type1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type3</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Storage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Shared__c</columns>
        <columns>Size__c</columns>
        <columns>Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Storage Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Storage</pluralLabel>
    <recordTypes>
        <fullName>Locker</fullName>
        <active>true</active>
        <description>Locker to store Members/Guests property.</description>
        <label>Locker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Storage</fullName>
        <active>true</active>
        <description>Storage unit available for rent.</description>
        <label>Storage</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>